rsync-php/app/02-uploader-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: uploader
  name: uploader
  namespace: uploader1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uploader
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: uploader
    spec:
      securityContext:
        runAsUser: 1000580000
        fsGroup: 1000580000
      containers:
      - image: quay.io/rcook/tools:php-demo
        name: tools
        ports:
        - containerPort: 8080
        volumeMounts:
          - name: uploader-persistent
            mountPath: /opt/app-root/src/uploaded
      volumes:
        - name: uploader-persistent
          persistentVolumeClaim:
            claimName: uploader-pvc
