rsync-php/app/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: uploader
  name: uploader
  namespace: uploader1
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: uploader
status:
  loadBalancer: {}
