rsync-php/app/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: uploader
  namespace: uploader
spec:
  host: uploader.octo.eng.rdu2.redhat.com
  port:
    targetPort: 8080
  to:
    kind: Service
    name: uploader
    weight: 100
  wildcardPolicy: None
